--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -45,8 +45,9 @@ $font-family_1: 'Work Sans';
             line-height: 19px;
             color: $color_2;
             .pull-left {
-               padding-right: 10px;
-               background: red;
+               padding-right: 5px;
+               padding-left: 5px;
+               float: left
             }
             &:hover {
                text-decoration: none;
