--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -188,7 +188,6 @@ $color_3: #213F7D;
   height: 0;
   background-color: #fff;
   z-index:222;
-  padding: 20px 15px;
   -webkit-box-shadow: 2px 4px 6px rgba(49, 49, 49, 0.2);
   box-shadow: 2px 4px 6px rgba(49, 49, 49, 0.2);
   display: -webkit-box;
@@ -209,11 +208,11 @@ $color_3: #213F7D;
 
 #container #menu-wrap .menu ul {
   list-style: none;
+  width: 150px
 }
 
 #container #menu-wrap .menu ul li {
-  margin: 15px 0 15px -25px;
-  width: 100px !important
+  margin: 20px 0 20px -25px;
 }
 
 #container #menu-wrap .menu ul li a {
@@ -222,6 +221,7 @@ $color_3: #213F7D;
 
 #container #menu-wrap .menu ul li a img {
   margin-right: 3px;
+  float: left;
 }
 
 #container #menu-wrap .menu ul li .link {
