--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -375,7 +375,7 @@ $color_3: #213F7D;
 @media (min-width: 601px) and (max-width: 767px) {
   .card {
     width: 100%;
-    height: 160px;
+    height: 170px;
     background: #FFFFFF;
     border: 1px solid rgba(33, 63, 125, 0.06);
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
@@ -383,7 +383,7 @@ $color_3: #213F7D;
     padding: 20px 30px 30px 30px;
     margin-bottom: 20px;
     img {
-      width: 20%;
+      width: 50px;
       left: 382px;
       top: 257px;
     }
@@ -514,14 +514,15 @@ $color_3: #213F7D;
   }
   .card {
     width: 100%;
-    height: 160px;
+    height: 170px;
     background: #FFFFFF;
     border: 1px solid rgba(33, 63, 125, 0.06);
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
     border-radius: 4px;
     padding: 20px 30px 30px 30px;
+    margin-bottom: 20px;
     img {
-      width: 20%;
+      width: 50px;
       left: 382px;
       top: 257px;
     }
@@ -550,14 +551,14 @@ $color_3: #213F7D;
 @media (min-width: 1418px) {
   .card {
     width: 100%;
-    height: 180px;
+    height: 190px;
     background: #FFFFFF;
     border: 1px solid rgba(33, 63, 125, 0.06);
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
     border-radius: 4px;
     padding: 20px 30px 30px 30px;
     img {
-      width: 20%;
+      width: 70px;
       left: 382px;
       top: 257px;
     }
@@ -585,11 +586,86 @@ $color_3: #213F7D;
 
 
 @media (max-width: 600px) {
-  #container {
-    position: absolute;
-    top: 50px;
-    width: calc(100% - 40px);
-    margin: 0;
+  .card {
+    height: 200px;
+    background: #FFFFFF;
+    border: 1px solid rgba(33, 63, 125, 0.06);
+    box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+    border-radius: 4px;
+    padding: 20px 30px 30px 30px;
+    margin-bottom: 20px;
+    img {
+      width: 70px;
+      left: 382px;
+      top: 257px;
+    }
+    .first-text {
+      font-family: 'Work Sans';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16px;
+      text-transform: uppercase;
+      padding: 20px 0 0 0;
+      color: $color_2;
+    }
+    .total {
+      font-family: 'Work Sans';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 28px;
+      text-transform: uppercase;
+      color: $color_3;
+    }
+  }
+
+  .sidebar-buttons{
+    border: 2px solid #000;
+    border-radius: 5px;
+    padding: 5px 10px;
+  }
+
+  #wrapper.toggled {
+    padding-left: 0;
+    #sidebar-wrapper {
+      width: 250px;
+    }
+    #page-content-wrapper {
+      position: relative;
+      margin-right: 0;
+      padding-left: 250px;
+    }
+  }
+  #sidebar-wrapper {
+    width: 250px;
+    position: absolute
+  }
+  #wrapper.toggled-2 {
+    #sidebar-wrapper {
+      width: 50px;
+      &:hover {
+        width: 250px;
+      }
+    }
+    #page-content-wrapper {
+      position: relative;
+      margin-right: 0;
+      margin-left: -200px;
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
+      -o-transition: all 0.5s ease;
+      transition: all 0.5s ease;
+      width: auto;
+    }
+  }
+  #page-content-wrapper {
+    padding: 20px;
+    position: relative;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
   }
 }
 
