--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -57,6 +57,9 @@ $color_4: #000;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
     font-size: 20px;
+    img {
+      margin-left: 10px;
+    }
   }
   .wrap {
     width: 30%;
