--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -458,6 +458,9 @@ $color_3: #213F7D;
 }
 
 @media (min-width: 768px) {
+  sidebar-buttons {
+    display: none
+  }
   #wrapper {
     padding-left: 250px;
   }
@@ -509,6 +512,9 @@ $color_3: #213F7D;
 
 
 @media (min-width: 768px) and (max-width: 1417px) {
+  .sidebar-buttons {
+    display: none
+  }
   .xyz {
     min-width: 360px;
   }
@@ -549,6 +555,9 @@ $color_3: #213F7D;
 }
 
 @media (min-width: 1418px) {
+  .sidebar-buttons {
+    display: none
+  }
   .card {
     width: 100%;
     height: 190px;
